--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
         <h1>impress.js<sup>*</sup></h1>
         <span class="footnote"><sup>*</sup> no rhyme intended</span>
     </div>
-<img src="<img src="http://photos1.blogger.com/blogger/1040/1790/320/c01-while.0.jpg" alt="while control structure" title="while control structure" style="height:80%;width:auto;margin:0 auto;display:block" />
-"while control structure" title="while control structure" style="height:80%;width:auto;margin:0 auto;display:block" />
+<img src=http://www.google.ca/imgres?imgurl=http://users.dsic.upv.es/asignaturas/facultad/bdv/doc/server803/A54654_01/03_strua.gif&imgrefurl=http://users.dsic.upv.es/asignaturas/facultad/bdv/doc/server803/A54654_01/03_struc.htm&h=146&w=305&tbnid=yzhhVpKPLhMX8M:&docid=XLxMtc6VGCfHuM&ei=rkRLVraxIcbUetGaqeAB&tbm=isch&ved=0CCQQMygDMANqFQoTCLbAgYbgl8kCFUaqHgodUU0KHA>
 
     <!--
         
