--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
         <h1>impress.js<sup>*</sup></h1>
         <span class="footnote"><sup>*</sup> no rhyme intended</span>
     </div>
-<img src=http://www.google.ca/imgres?imgurl=http://users.dsic.upv.es/asignaturas/facultad/bdv/doc/server803/A54654_01/03_strua.gif&imgrefurl=http://users.dsic.upv.es/asignaturas/facultad/bdv/doc/server803/A54654_01/03_struc.htm&h=146&w=305&tbnid=yzhhVpKPLhMX8M:&docid=XLxMtc6VGCfHuM&ei=rkRLVraxIcbUetGaqeAB&tbm=isch&ved=0CCQQMygDMANqFQoTCLbAgYbgl8kCFUaqHgodUU0KHA>
+<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ5keuT5agYxTs_BC-rbEgSSsYXDoHMQs6jDlFKHC3XubonlTEr-A.jpg" alt="case control structure" title="case control structure" style="width:100%" />
+
 
     <!--
         
