--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <h1>impress.js<sup>*</sup></h1>
         <span class="footnote"><sup>*</sup> no rhyme intended</span>
     </div>
-<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ5keuT5agYxTs_BC-rbEgSSsYXDoHMQs6jDlFKHC3XubonlTEr-A.jpg" alt="case control structure" title="case control structure" style="width:100%" />
+<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ5keuT5agYxTs_BC-rbEgSSsYXDoHMQs6jDlFKHC3XubonlTEr-A" alt="case control structure" title="case control structure" style="width:100%" />
 
 
     <!--
