--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 
     <div class="step slide" data-x="1000" data-y="-1500">
         <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your talk?</q>
+    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ5keuT5agYxTs_BC-rbEgSSsYXDoHMQs6jDlFKHC3XubonlTEr-A" alt="case control structure" title="case control structure" style="width:100%" />
     </div>
 
     <!--
