--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     -->
     <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
         <p>and <b>tiny</b> ideas</p>
-        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ5keuT5agYxTs_BC-rbEgSSsYXDoHMQs6jDlFKHC3XubonlTEr-A" alt="case control structure" title="case control structure" style="width:100%" />
+   < img src= http://cnx.org/resources/e10b6f07f77a2597795e20b3e43544669ddf9d9c/graphics2.jpg>
     </div>
 
     <!--
